// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > Props > Disabled 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 0.4;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
  disabled=""
>
  Button
</button>
`;

exports[`Button component > Props > Full Width 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: 100%;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
>
  Button
</button>
`;

exports[`Button component > Props > Loading > Filled 1`] = `
.c2 svg {
  animation: spin 1s linear infinite;
}

.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

.c1 {
  position: absolute;
  inset: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  border-radius: 6px;
}

<button
  class="c0"
  data-testid="button"
>
  Button
  <div
    class="c1"
  >
    <div
      class="c2"
      data-testid="Loader"
      style="height: 20px;"
    >
      <svg
        color="#fff"
        data-testid="Icon"
        fill="none"
        height="20"
        width="20"
      >
        <use
          href="/sprite.svg#Load"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Button component > Props > Loading > Outlined 1`] = `
.c2 svg {
  animation: spin 1s linear infinite;
}

.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #346beb;
  background-color: #fff;
}

.c0:focus~.focus {
  opacity: 1;
}

.c1 {
  position: absolute;
  inset: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  border-radius: 6px;
}

<button
  class="c0"
  data-testid="button"
>
  Button
  <div
    class="c1"
  >
    <div
      class="c2"
      data-testid="Loader"
      style="height: 20px;"
    >
      <svg
        color="#346beb"
        data-testid="Icon"
        fill="none"
        height="20"
        width="20"
      >
        <use
          href="/sprite.svg#Load"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Button component > Props > Size > Large 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 10px 24px;
  height: 40px;
  font-size: 18px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
>
  Button
</button>
`;

exports[`Button component > Props > Size > Small 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
>
  Button
</button>
`;

exports[`Button component > Props > Variant > Filled 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #fff;
  background-color: #346beb;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
>
  Button
</button>
`;

exports[`Button component > Props > Variant > Outlined 1`] = `
.c0 {
  position: relative;
  outline: none;
  border-radius: 6px;
  cursor: pointer;
  transition: all 0.1s;
  border: 1px solid #346beb;
  width: auto;
  opacity: 1;
  padding: 5px 12px;
  height: 28px;
  font-size: 14px;
  color: #346beb;
  background-color: #fff;
}

.c0:focus~.focus {
  opacity: 1;
}

<button
  class="c0"
  data-testid="button"
>
  Button
</button>
`;
